Fixes for static HTML5 version.

--- a/app-web/html5-client/index.html
+++ b/app-web/html5-client/index.html
@@ -19,7 +19,9 @@
     <link rel="shortcut icon" href="/assets/ux/favicon.ico">
 
     <script type="text/javascript">
-        window.contextPath = "https://localhost:8443";
+        window.contextPath = "http://itjobsboard-env.eu-west-1.elasticbeanstalk.com/";
+        // http://itjobsboard-env.eu-west-1.elasticbeanstalk.com
+        // https://localhost:8443
     </script>
 
     <script>
