--- a/app-web/ionic-client/src/pages/index/index.html
+++ b/app-web/ionic-client/src/pages/index/index.html
@@ -1,9 +1,3 @@
-<!--
-  Generated template for the Index page.
-
-  See http://ionicframework.com/docs/v2/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
   <ion-navbar>
     <button ion-button menuToggle>
@@ -14,14 +8,71 @@
 </ion-header>
 
 
-<ion-content padding>
+<ion-content class="login" *ngIf="!auth.authenticated()">
 
-  <h3>Welcome to It Jobs Board Europe</h3>
+  <div>
+    <ion-segment [(ngModel)]="authType">
+      <ion-segment-button value="login">
+        Login
+      </ion-segment-button>
+      <ion-segment-button value="signup">
+        Signup
+      </ion-segment-button>
+    </ion-segment>
+  </div>
 
-  <p>
-    You can find online jobs our <a href="http://itjobsboard.eu">web site</a>.
-  </p>
+  <div [ngSwitch]="authType">
+    <form *ngSwitchCase="'login'" #loginCreds="ngForm" (ngSubmit)="login(loginCreds.value)">
+      <ion-item>
+        <ion-label>Username</ion-label>
+        <ion-input type="text" ngControl="username"></ion-input>
+      </ion-item>
 
-  <button ion-button secondary menuToggle>Show Jobs</button>
+      <ion-item>
+        <ion-label>Password</ion-label>
+        <ion-input type="password" ngControl="password"></ion-input>
+      </ion-item>
+
+      <div padding>
+        <button block type="submit">Login</button>
+      </div>
+
+    </form>
+    <form *ngSwitchCase="'signup'" #signupCreds="ngForm" (ngSubmit)="signup(signupCreds.value)">
+      <ion-item>
+        <ion-label>Username</ion-label>
+        <ion-input type="text" ngControl="username"></ion-input>
+      </ion-item>
+
+      <ion-item>
+        <ion-label>Password</ion-label>
+        <ion-input type="password" ngControl="password"></ion-input>
+      </ion-item>
+
+      <div padding>
+        <button block type="submit">Signup</button>
+      </div>
+
+    </form>
+  </div>
+
+  <div padding>
+    <p *ngIf="error" class="error">{{ error._body }}</p>
+  </div>
+
+  <div *ngIf="auth.authenticated()">
+    <div padding>
+      <h1>Welcome, {{ user }}</h1>
+      <button block (click)="logout()">Logout</button>
+    </div>
+  </div>
+
+  <div>
+    <h3>Welcome to It Jobs Board Europe</h3>
+    <p>
+      You can find online jobs our <a href="http://itjobsboard.eu">web site</a>.
+    </p>
+    <button ion-button secondary menuToggle>Show Jobs</button>
+  </div>
 
 </ion-content>
