--- a/app-web/ionic-client/src/pages/index/index.html
+++ b/app-web/ionic-client/src/pages/index/index.html
@@ -8,71 +8,74 @@
 </ion-header>
 
 
-<ion-content class="login" *ngIf="!auth.authenticated()">
+<ion-content class="login">
 
-  <div>
-    <ion-segment [(ngModel)]="authType">
-      <ion-segment-button value="login">
-        Login
-      </ion-segment-button>
-      <ion-segment-button value="signup">
-        Signup
-      </ion-segment-button>
-    </ion-segment>
-  </div>
-
-  <div [ngSwitch]="authType">
-    <form *ngSwitchCase="'login'" #loginCreds="ngForm" (ngSubmit)="login(loginCreds.value)">
-      <ion-item>
-        <ion-label>Username</ion-label>
-        <ion-input type="text" ngControl="username"></ion-input>
-      </ion-item>
-
-      <ion-item>
-        <ion-label>Password</ion-label>
-        <ion-input type="password" ngControl="password"></ion-input>
-      </ion-item>
-
-      <div padding>
-        <button block type="submit">Login</button>
-      </div>
-
-    </form>
-    <form *ngSwitchCase="'signup'" #signupCreds="ngForm" (ngSubmit)="signup(signupCreds.value)">
-      <ion-item>
-        <ion-label>Username</ion-label>
-        <ion-input type="text" ngControl="username"></ion-input>
-      </ion-item>
-
-      <ion-item>
-        <ion-label>Password</ion-label>
-        <ion-input type="password" ngControl="password"></ion-input>
-      </ion-item>
-
-      <div padding>
-        <button block type="submit">Signup</button>
-      </div>
-
-    </form>
-  </div>
-
-  <div padding>
-    <p *ngIf="error" class="error">{{ error._body }}</p>
-  </div>
-
-  <div *ngIf="auth.authenticated()">
-    <div padding>
-      <h1>Welcome, {{ user }}</h1>
-      <button block (click)="logout()">Logout</button>
-    </div>
-  </div>
-
-  <div>
+  <div style="text-align: center">
     <h3>Welcome to It Jobs Board Europe</h3>
     <p>
       You can find online jobs our <a href="http://itjobsboard.eu">web site</a>.
     </p>
-    <button ion-button secondary menuToggle>Show Jobs</button>
+  </div>
+
+  <div *ngIf="!auth.authenticated()">
+
+    <div padding>
+      <ion-segment [(ngModel)]="authType">
+        <ion-segment-button value="login">
+          Login
+        </ion-segment-button>
+        <ion-segment-button value="signup">
+          Signup
+        </ion-segment-button>
+      </ion-segment>
+    </div>
+
+    <div [ngSwitch]="authType">
+      <form *ngSwitchCase="'login'" #loginCreds="ngForm" (ngSubmit)="login(loginCreds.value)">
+        <ion-item>
+          <ion-label>Username</ion-label>
+          <ion-input type="text" name="username" ngModel></ion-input>
+        </ion-item>
+
+        <ion-item>
+          <ion-label>Password</ion-label>
+          <ion-input type="password" name="password" ngModel></ion-input>
+        </ion-item>
+
+        <div padding>
+          <button block type="submit" ion-button secondary>Login</button>
+        </div>
+
+      </form>
+      <form *ngSwitchCase="'signup'" #signupCreds="ngForm" (ngSubmit)="signup(signupCreds.value)">
+        <ion-item>
+          <ion-label>Username</ion-label>
+          <ion-input type="text" ngControl="username"></ion-input>
+        </ion-item>
+
+        <ion-item>
+          <ion-label>Password</ion-label>
+          <ion-input type="password" ngControl="password"></ion-input>
+        </ion-item>
+
+        <div padding>
+          <button block type="submit" ion-button secondary>Signup</button>
+        </div>
+
+      </form>
+    </div>
+
+    <div padding>
+      <p *ngIf="error" class="error">{{ error._body }}</p>
+    </div>
+
+  </div>
+
+  <div *ngIf="auth.authenticated()">
+    <div padding>
+      <h1>Hello {{ user }}</h1>
+      <button ion-button secondary block (click)="logout()">Logout</button>
+    </div>
   </div>
 
 </ion-content>
