Added errors support in client

--- a/app-web/ionic-client/src/pages/index/index.html
+++ b/app-web/ionic-client/src/pages/index/index.html
@@ -50,12 +50,12 @@
       <form *ngSwitchCase="'signup'" #signupCreds="ngForm" (ngSubmit)="signup(signupCreds.value)">
         <ion-item>
           <ion-label>Username</ion-label>
-          <ion-input type="text" ngControl="username"></ion-input>
+          <ion-input type="text" name="username" ngModel></ion-input>
         </ion-item>
 
         <ion-item>
           <ion-label>Password</ion-label>
-          <ion-input type="password" ngControl="password"></ion-input>
+          <ion-input type="password" name="password" ngModel></ion-input>
         </ion-item>
 
         <div padding>
@@ -66,7 +66,7 @@
     </div>
 
     <div padding>
-      <p *ngIf="error" class="error">{{ error._body }}</p>
+      <p *ngIf="error" class="error"><ion-badge color="danger" item-right>{{ error }}</ion-badge></p>
     </div>
 
   </div>
