--- a/app-web/ionic-client/src/pages/index/index.html
+++ b/app-web/ionic-client/src/pages/index/index.html
@@ -7,63 +7,98 @@
   </ion-navbar>
 </ion-header>
 
+<ion-content padding class="login auth-page">
 
-<ion-content class="login">
-
-  <div style="text-align: center">
-    <h3>Welcome to It Jobs Board Europe</h3>
-    <p>
-      You can find online jobs our <a href="http://itjobsboard.eu">web site</a>.
-    </p>
+  <!-- Logo -->
+  <div text-center padding>
+    <h1 color="light" >
+      <i class="ion-social-angular"></i>
+      <ion-icon name="logo-angular"></ion-icon>
+    </h1>
+    <h2 color="light" >Welcome to It Jobs Board Europe</h2>
+    <h5 color="light" >You can find online jobs our <a href="http://itjobsboard.eu">web site</a>.</h5>
   </div>
 
   <div *ngIf="!auth.authenticated()">
     <div padding>
       <ion-segment [(ngModel)]="authType">
         <ion-segment-button value="login">
-          Login
+          <b color="light">Login</b>
         </ion-segment-button>
         <ion-segment-button value="signup">
-          Signup
+          <b color="light">Signup</b>
         </ion-segment-button>
       </ion-segment>
     </div>
 
     <div [ngSwitch]="authType">
+
+      <!-- Login form -->
       <form *ngSwitchCase="'login'" #loginCreds="ngForm" (ngSubmit)="login(loginCreds.value)">
+
         <ion-item>
-          <ion-label>Username</ion-label>
-          <ion-input type="text" name="username" ngModel></ion-input>
+          <ion-icon item-left name="ios-mail-outline"></ion-icon>
+          <ion-input type="text" name="username" placeholder="Email" ngModel></ion-input>
         </ion-item>
 
         <ion-item>
-          <ion-label>Password</ion-label>
-          <ion-input type="password" name="password" ngModel></ion-input>
+          <ion-icon item-left name="ios-lock-outline"></ion-icon>
+          <ion-input type="password" name="password" placeholder="Password" ngModel></ion-input>
         </ion-item>
 
         <div padding>
           <button block type="submit" ion-button secondary>Login</button>
         </div>
+
+        <!-- Social login -->
+        <div padding text-center>
+          <span color="light" >Or login with:</span>
+          <p>
+            <a padding class="facebook-color">
+              <ion-icon name="logo-facebook"></ion-icon>
+            </a>
+            <a padding class="twitter-color">
+              <ion-icon name="logo-twitter"></ion-icon>
+            </a>
+            <a padding class="googleplus-color">
+              <ion-icon name="logo-googleplus"></ion-icon>
+            </a>
+          </p>
+        </div>
       </form>
+
 
       <form *ngSwitchCase="'signup'" #signupCreds="ngForm" (ngSubmit)="signup(signupCreds.value)">
         <ion-item>
-          <ion-label>Username</ion-label>
-          <ion-input type="text" name="username" ngModel></ion-input>
+          <ion-icon item-left name="ios-mail-outline"></ion-icon>
+          <ion-input type="text" name="username" placeholder="Email" ngModel></ion-input>
         </ion-item>
 
         <ion-item>
-          <ion-label>Password</ion-label>
-          <ion-input type="password" name="password" ngModel></ion-input>
+          <ion-icon item-left name="ios-lock-outline"></ion-icon>
+          <ion-input type="password" name="password" placeholder="Password" ngModel></ion-input>
         </ion-item>
 
         <div padding>
           <button block type="submit" ion-button secondary>Signup</button>
         </div>
       </form>
+
+      <!-- Other links -->
+      <!--<ion-grid>-->
+        <!--<ion-row>-->
+          <!--<ion-col width-50>-->
+            <!--<span color="light">Forgot password?</span>-->
+          <!--</ion-col>-->
+
+          <!--<ion-col width-50>-->
+            <!--<a color="light" (click)="register()">New here? Sign up</a>-->
+          <!--</ion-col>-->
+        <!--</ion-row>-->
+      <!--</ion-grid>-->
     </div>
 
-    <div padding>
+    <div padding style="text-align: center">
       <p *ngIf="error" class="error"><ion-badge color="danger" item-right>{{ error }}</ion-badge></p>
     </div>
   </div>
