--- a/app-web/ionic-client/src/pages/index/index.html
+++ b/app-web/ionic-client/src/pages/index/index.html
@@ -100,6 +100,7 @@
 
     <div padding style="text-align: center">
       <p *ngIf="error" class="error"><ion-badge color="danger" item-right>{{ error }}</ion-badge></p>
+      <p *ngIf="success" class="primary"><ion-badge color="primary" item-right>{{ success }}</ion-badge></p>
     </div>
   </div>
 
