--- a/app-web/html5-client/index.html
+++ b/app-web/html5-client/index.html
@@ -64,6 +64,7 @@
                     <li><a href="/#jobs">Jobs</a></li>
                     <li><a href="/#about">About us</a></li>
                     <li><a href="/#faq">FAQ</a></li>
+                    <li><a href="/#privacy">Privacy Policy</a></li>
                     <li><a href="/#contact">Contact</a></li>
                 </ul>
                 <a href="#" data-toggle="modal" data-target="#login-modal" class="btn navbar-btn btn-white">
@@ -127,7 +128,7 @@
                 <div class="col-md-4 col-sm-6">
                     <h4>Our office</h4>
                     <h5>Bucharest</h5>
-                    <p> Cristescu Dima<br />nr. 7<br />mobile: 0040743163039</p>
+                    <p> Pake Protopopescu<br />nr. 7<br />mobile: 00407431630</p>
                 </div>
             </div>
             <div class="row">
@@ -162,7 +163,6 @@
                     <p>&copy;2017 ItJobsBoard.EU</p>
                 </div>
                 <div class="col-md-6">
-                    <p class="credit pull-right">Sample for <a href="https://grailsthreebook.com">Grails 3 Book</a></p>
                 </div>
             </div>
         </div>
